   * New [has_attack] in standard unit filters; supercedes has_weapon= and
     uses full weapon filter.
   * lua_function=var.member now works in SUF; however, 'var' still needs to
     be a global variable.
   * Added new keys name_generator, male_name_generator and female_name_generator
     for the [race] tag to declare a context-free grammar to describe how names
     are derived
   * AiWML:
     * Simplified aspect syntax which works for all aspects, present and future:
       * All aspects with simple values can be specified as key=value
       * Except attacks, all aspects with complex values have a simple tag form
         containing only the aspect value (e.g. [avoid])
       * All aspects, simple and complex, can be specified using a tag named by
         the aspect, whose contents is the same as a corresponding [facet]
       * The full [aspect] and [facet] syntax also still works
     * [ai] configs no longer recognize the version= key
     * ai_algorithm key now selects a preset AI; possible values include
       "ai_default_rca", "experimental_ai", and "idle_ai", but custom AIs
       defined by eras or modifications with an [ai] tag can also be used
     * [leader_goal] now automatically sets facet ID for auto_remove
       (Only if using simplified syntax; in full syntax, the ID must still be
       specified in two places.)
     * The AI config in the gamestate inspector is now split into multiple
       sections according to the type of component.
     * The following deprecated components have been removed:
       * recruitment stage (name=ai_default::recruitment)
       * old recruitment candidate action
         (name=ai_default_rca::aspect_recruitment_phase)
       * old simple move-to-targets candidate action
         (name=ai_default_rca::simple_move_and_targeting_phase)
       * number_of_possible_recruits_to_force_recruit aspect
       * recruitment_ignore_bad_combat aspect
       * recruitment_ignore_bad_movement aspect