@@ -47,6 +47,8 @@ Version 1.13.4+dev:
    * Added new keys name_generator, male_name_generator and female_name_generator
      for the [race] tag to declare a context-free grammar to describe how names
      are derived
+   * Modification tags in [modify_unit] now support delayed_variable_substitution
+     (This means [advancement], [object], and [trait] tags.)
    * AiWML:
      * Simplified aspect syntax which works for all aspects, present and future:
        * All aspects with simple values can be specified as key=value
